2018-08-11  Charlie Zender  <zender@aerosol>

	* NCO 4.7.6 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.6: Honaunau';git push
	git tag -a 4.7.6 -m 'ncremap RRG, MWF, -d&-g, -g&-G;aux w/o std_nm;HPSS_TRY';git push --tags

	* Fix nco_map_mk() map-file creation by allocating space for var_nm

2018-08-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.6-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.6-beta01: Sawdust';git push
	git tag -a 4.7.6-beta01 -m 'ncremap allow -d && -g, and -g && -G;aux rgr fix clang bld;document rrg, mwf, tps';git push --tags

	* Fix syntax, indentation, and compiler warnings in nco_bld_crd_nm_aux()

	* Remove comparisons to undefined is_1D_crd and is_1D_rec_crd. Regression test now passes with clang.

	* Document RRG, TempestRemap, and MWF in confluence

2018-08-06  Charlie Zender  <zender@uci.edu>

	* Fix logic of grid arguments diagnostic errors

2018-08-03  Charlie Zender  <zender@uci.edu>

	* ncremap -g grd_dst.nc -G grd_sng now works in "grid-only" mode

2018-08-02  Charlie Zender  <zender@aerosol>

	* Add --dmm_fl_mk, --fl_dmm to create dummy input file fl_in before ncks opens it

2018-08-02  Charlie Zender  <zender@uci.edu>

	* When ncremap receives both -d dat_dst and -g grd_dst, then infer grd_dst from dat_dst

2018-07-29  Charlie Zender  <zender@aerosol>

	* Use HPSS_TRY to create better hints for finding missing files

	* Fix ncap2 build on aerosol/firn: discard MacPorts antlr, build antlr from scratch, eliminate getopt.h getopt_bds.h from ~/include (to fix undefined references to _my_getopt, _my_optind, etc.)

2018-07-28  Charlie Zender  <zender@aerosol>

	* NCO 4.7.6-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.6-alpha06: Drag';git push
	git tag -a 4.7.6-alpha06 -m 'MWF MPI fvfv fvse .g = SE;cnk wrn;ncremap timers;HPSS_TRY';git push --tags

	* Add HPSS_TRY option

	* Add per-map timers to MWF output for dbg_lvl >= 1
