@@ -10,7 +10,7 @@ Version 4.7.6 is primarily a feature release for ncremap.
 There are two new processing modes, one for regridding regional data,
 and one for generating all mapfile permutations with all interpolation 
 algorithms. There is also improved support for auxiliary coordinates
-that lack coordinaes/standard_name conventions, improved ncap2
+that lack coordinates/standard_name conventions, improved ncap2
 command-line script handling in Windows, and less intrusive HPSS file
 system support. 
 
@@ -32,7 +32,7 @@ A. NCO versions 4.6.6+ (April, 2017) has looked for files on an HPSS
    ncks -l . --hpss /home/zender/nco/in.nc
    http://nco.sf.net#hpss
 
-A. ncremap now regrids regional output produced by CESM CAM-SE and
+B. ncremap now regrids regional output produced by CESM CAM-SE and
    E3SM EAM models. Models output these RRG (for "regional
    regridding" format) files if requested by the finclNlonlat
    namelist parameter. RRG files from FV-dycore simulations were
@@ -42,7 +42,7 @@ A. ncremap now regrids regional output produced by CESM CAM-SE and
    https://acme-climate.atlassian.net/wiki/spaces/SIM/pages/754286611/Regridding+E3SM+Data+with+ncremap
    and to others via email request (it will be in Users Guide soon).
 
-A. ncremap includes an MWF-mode (for "Make All Weight Files") that
+C. ncremap includes an MWF-mode (for "Make All Weight Files") that
    generates and names, with one command and in a self-consistent
    manner, all combinations of E3SM global atmosphere<->ocean maps
    with both ERWG and Tempest. MWF-mode automates the laborious and
@@ -54,7 +54,7 @@ A. ncremap includes an MWF-mode (for "Make All Weight Files") that
    https://acme-climate.atlassian.net/wiki/spaces/SIM/pages/754286611/Regridding+E3SM+Data+with+ncremap
    and to others via email request (it will be in Users Guide soon).
 
-A. ncap2 string-handling is now more compatible between Windows and
+D. ncap2 string-handling is now more compatible between Windows and
    better OSs. Previously, some ncap2 scripts could behave differently
    due to the Windows definition of the C++ c_str() function.
 
@@ -64,10 +64,10 @@ A. NCO completes when chunking into non-netCDF4 files (of course it
    ignores the chunking request). Previous NCO tried to complete but
    dumped-core. 
 
-A. NCO now only prints one WARNING about user-specified chunk size for  
+B. NCO now only prints one WARNING about user-specified chunk size for  
    record dimension being too big.
 
-A. Repeated notice: netCDF 4.6.1 fixes the CDF5 bug described here
+C. Repeated notice: netCDF 4.6.1 fixes the CDF5 bug described here
    http://nco.sf.net#bug_cdf5
    We STRONGLY recommend that CDF5 users upgrade to netCDF 4.6.1.
    NCO error messages and HINTs have been updated to better describe
